Unit 5, new .md file and assets

--- a/_units/05.md
+++ b/_units/05.md
@@ -1,18 +1,19 @@
 ---
 ###
 # unit information: 
-# Fill out with relevant information for this unit
+# Unit 5: Pitch, Intervals and Key Areas
 ###
-title: Title of the unit
-number: 0
+title: Pitch, Intervals and Key Areas
+number: 5
 short_description: short description of the unit
-summary: brief summary of the unit
+summary: Pitch is one of the most important attributes of music. This unit will cover the different types of pitch we may perceive in music. We start with the relationship between frequency in the physical world and pitch in the perceptual world. We continue to discuss the cases when pitch may occur in the absence of energy at the perceived frequency, and propose models which may account for this perceptual phenomenon. Different types of pitch perception will be discussed, including the qualities that makes it form transposable melodies and harmonies. Finally, we will discuss pitch spaces and tuning systems that enable the systematic use of pitch as a musical medium.
 authors: 
- - author 1
-topics: [topic 1, topic 2]
+ - Psyche Loui and Georg Hajdu
+topics: [Pitch, Interval, Theory of Pitch Perception, Tonality, Key Area]
 test_questions:
- - question 1
- - question 2
+ - Calculate the sizes of following intervals.  Pythagorean major third (81 / 64),  septimal minor seventh (7/4) and  undecimal augmented fourth (11 / 8). Determine how much they deviate from their equal-tempered counterparts.
+ - The calculation of virtual pitch was attributed to cubic difference tones  in past which, strikingly, yield similar results. Explain why the brain will most likely still use a different method and give an example where difference tones and virtual pitch differ.
+ - Discuss to what extent the tonality profiles derived by the probe tone method point to universal musical principles or whether it's rather cultural influences that determine the perception of tonal hierachies.
 
 ###
 # page layout:
@@ -25,6 +26,167 @@ mathjax: true
 
 {% include unit_preamble.md %}
 
-# Section 1
+# Pitch
+
+Spectral composition and temporal development of a sound determines pitch and timbre.
+Unambiguous pitch only for harmonic sounds.
+Ambiguity in inharmonic sounds caused by competing virtual pitches
+
+Pitch is thought of as a morphophoric, or form-bearing, medium. This means that patterns of pitch can take on a certain form (i.e. melody) which can be transposed - shifted up or down in pitch - and remain invariant in its perceptual structure. Musically, this accounts for how the same melody can be transposed into different keys and still be recognizable as the same theme.
+
+# Frequency and Pitch
+
+The concept of sound frequencies was first introduced in Unit 1. While frequency is a physical attribute which characterizes waves of sound energy, pitch is a perceptual attribute which describes our experience of tones. Generally, the higher the frequency of a sound, the higher the perceived pitch. 
+Pitch is perceived in sounds that are periodic; i.e. sounds with features which recur at regular frequencies. Aperiodic sounds are more likely to be perceived not as pitches, but as noise or transient (quickly-changing) clicks. Thus, pitch perception depends on frequencies of sounds entering the ears. 
+
+The orchestra tunes to the pitch of concert A4, which usually corresponds to sounds with the fundamental frequency of 440Hz. This means that while energy of sound waves may be at 440Hz or above, we perceive sounds to be equivalent in pitch as a pure tone at 440Hz. 
+
+Our percept of pitch is **logarithmically organized** such that an octave above concert A is twice its frequency, therefore, 880Hz; whereas the next octave above 880Hz is twice 880Hz, which is 1760Hz. Thus each octave corresponds to a doubling in frequency, resulting in a logarithmic function relating frequency to pitch.
+
+{% include img-figure url="/MUTOR/assets/images/PitchVsFrequency.jpg" description="Pitch vs. Frequency" %}
+
+# Intervals
+
+The mathematical relationship between an interval created by two pitches and their respective frequencies is given by this formula:
+
+I = 1200 log2(F1/F0) 
+  = 1200 log10(F1/F0)/log10(2) 
+
+Replace F1 and F0 by integer numbers and get the result by entering the formula into a browser.  
+
+The unit for I is cents — one cent being a 1/100th of a semitone.
+
+{% include begin-table description="Some data" %}
+| Interval (Name) | Frequenzverhältnis | Interval (Size in Cents) | Size of Tempered Interval
+| unison | 1/1 | 0 | 0 |
+| minor second | 	16/15 | 112 | 100 |
+| major second | 9/8  | 204 | 200 |
+| minor third | 6/5 | 316 | 300 |
+| major third | 5/4 | 386 | 400 |
+| just fourth | 4/3 | 498 | 500 |
+| diminished fifth | 7/5 | 583 | 600 |
+| juist fifth | 3/2 | 702 | 700 |
+| minor sixth | 8/5 | 814 | 800 |
+| major sixth | 5/3 | 884 | 900 |
+| minor seventh | 16/9 | 996 | 1000 |
+| major seventh | 15/8 | 1088 | 1100 |
+| octave | 2/1 | 1200 | 1200 |
+{% include end-table %}
+
+# The Fifth as the Generator of Tonality
+
+The fifth (3: 2) occupies an outstanding position in almost all musical cultures. In contrast to so-called imperfect consonances such as thirds and sixths, deviations of the fifth are not well tolerated by the listeners. It has a similarity with the octave, which is perceived as an identical sound.
+
+The special significance of the fifth manifests itself in the fact that it appears on four different levels of music and thus indicates of the holistic, self-similar or fractal nature of (tonal) music.
+
+1. Harmonic series
+1. intervals of complex tones
+1. function: T-D
+1. key areas: C major - G major
+
+# Residual or Virtual Pitch
+
+The brain recognizes the fundamental pitch in harmonic and some inharmonic sounds even in the absence of lower partials. Prerequisite: three adjacent partials.
+Periodicity remains intact in the absence of fundamental.
+However, this does not explain the perception of strike tones in bells.
+Therefore, Terhardt has formulated the theory of pattern recognition (comparable to subjective contour in vision, see Kanizsa triangle).
+
+Sometimes, pitch is perceived at a fundamental frequency even when energy is nonexistent at the frequency of the fundamental. This is known as virtual pitch. Virtual pitch, also known as the missing fundamental, is a classic phenomenon in audition where sound is perceived at a frequency where no energy is present. When energy from harmonic components other than the fundamental is present at integer multiples of the fundamental frequency, the brain is able to infer a virtual pitch at the missing fundamental. Mechanisms that the brain may be using to infer virtual pitch is still an issue of debate, although various [[models of pitch perception|PitchPerceptionModels]] have been proposed to explain this perceptual phenomenon.
+Virtual pitch is only perceived if the missing fundamental frequency lies within the existence region for pitch, which is approximately the frequency range of 30Hz to 3.2 kHz (Pressnitzer et al, 2001).
+
+
+Virtual pitch audio demonstrations (from ASA demonstration CD): 
+Spectral and virtual pitch: you will hear a tune of Westminster chimes presented in virtual pitch, due to the configuration of spectral components harmonically related to the missing fundamental. The spectral and virtual pitches will each be masked in the second and third clips.
+[[1|http://cnmat.berkeley.edu/Music108/mp3s/asacd/40%20Masking%20Spectral%20And%20Virtual%20Pitc.mp3]]    [[2|http://cnmat.berkeley.edu/Music108/mp3s/asacd/41%20Masking%20Spectral%20And%20Virtual%20Pitc.mp3]]     [[3|http://cnmat.berkeley.edu/Music108/mp3s/asacd/42%20Masking%20Spectral%20And%20Virtual%20Pitc.mp3]]
+
+# Pitch Perception Models
+
+For centuries, hearing and musical scientists have attempted to build an optimal model that would account for pitch perception. An accurate model of pitch perception must describe how components of frequencies are converted into pitch in the logarithmic scale; it must also explain how fundamental frequencies are calculated, as well as the phenomenon of virtual pitch. Early pitch perception models fall under two categories: spectral models and temporal models.
+Spectral models of pitch perception, which are based on the frequency spectrum of sounds, tend to start with the Fourier analysis, which convert sound waves into its frequency components. One of the early spectral or place models was proposed by Helmholtz who speculated that each sinusoidal component of a sound triggers sensation at a place coding for pitch. In contrast, temporal models make use of the periodicity of waveforms comprising sounds. By calculating the time between periodic points in the waveform, the fundamental frequency can be calculated. 
+Modern theories of pitch perception take into account both spectral and temporal components of sound. Two types of modern pitch perception theories which receive the most support today are the pattern matching models and the autocorrelation models. Pattern-matching models of pitch perception, such as the harmonic template matching model (e.g. Lin & Hartmann, 1998), postulate that we have stored in our brains a set of templates which, when frequency components are activated, we overlay onto the pattern of activation in order to calculate the fundamental pitch.
+The autocorrelation models (Licklider, 1959) use a measure of self-similarity of a waveform in order to derive its fundamental. It is based on the idea that a periodic waveform, when phase-shifted to exactly one period of its fundamental away from a starting point, should correlate perfectly with itself. By comparing the time lag between perfectly correlated frequency components, the model can derive the period of the complex sound, and thus the fundamental frequency.
+The debate between pattern matching and autocorrelation models have received widely discussed among hearing researchers in recent years. While new data continues to emerge in support of either model, results from neuroscience looking for autocorrelators or harmonic templates in the auditory system may contribute to resolve these debates.
+
+## Place theory
+According to Helmholtz, the ear is a frequency analyzer: Sounds create "resonances" on the basilar membrane that trigger nerve impulses. The basilar membrane acts like a filter bank (bandpass filter) whose individual widths are described by the so-called critical bandwidth.
+The hearing range is divided into 24 barks (critical bandwidths), which in the middle roughly corresponds to the size of a minor third (border between step vs. leap perception).
+
+{% include img-figure url="/MUTOR/assets/images/place-barks.png" description="Frequency vs Bark and ERB" %}
+
+
+## Temporal theory
+According to Schouten, the ear is a counter and can count the peaks and troughs of a wave and pass this information by nerve impulses to the brain.
+
+{% include img-figure url="/MUTOR/assets/images/temporal-complex.png" description="Periodic waveform of a complex tone" %}
+{% include img-figure url="/MUTOR/assets/images/temporal-simple.png" description="Periodic waveform of a simple tone" %}
+
+## Current theories
+
+Truth is probably somewhere in between:
+Template theory (Terhardt, Parncutt). The brain creates a template.
+Model of the summation autocorrelogram (Lyon / Slaney, Patterson). The brain searches for periodicity in the output of bandpass filters (channels) and sums them up. As a result, some phenomena can now be explained, which arise by instance by detuning lower partials or transposing sounds with just odd partials.
+
+{% include img-figure url="/MUTOR/assets/images/The-autocorrelogram-A-for-a-200-Hz-fundamental-harmonic-complex-computed-by-taking-the_W640.jpg" description="Autocorrelogram" %}
+
+
+Yost, W.A. Pitch perception. Attention, Perception, & Psychophysics 71, 1701–1715 (2009). 
+Figure 6. The autocorrelogram (A) for a 200-Hz-fundamental harmonic complex computed by taking the autocorrelation in each channel of the neural activation pattern shown in Figure 2. The high correlation every 5 msec is used to predict a 200-Hz pitch (reciprocal of 5 msec) for this stimulus. Panel B depicts the summary autocorrelogram for the 200-Hz-fundamental harmonic complex obtained by summing the correlations across channels for the autocorrelogram shown in panel A.  
+
+{% include note author="gh" text="I'd like go over the cases when the brain fails to calculate correct pitch: Terhardt: 11:12:13; Low-pitched triangle wave" %}
+
+# Cognitive Models of Pitch
+
+American psychologist Roger Shepard has developed a cognitive psychological model that represents pitch in a helix. In this case, the circular chroma circle (horizontal) can be distinguished from height (vertical). Octaves are always on the same side of the helix. By a clever construction tones can be formed, in which the dimension of the height is eliminated. These sounds, called "Shepard tones", are useful for constructing auditory illusions, e.g. endlessly rising or falling glissandi or scales. 
+
+{% include img-figure url="/MUTOR/assets/images/helix.png" description="Pitch helix" %}
+
+Taking the relationships into consideration, Shepard eventually adjusted the helix to a five-dimensional model.
+
+{% include img-figure url="/MUTOR/assets/images/Helix-Fifths-Relationsship.jpg" description="Pitch helix" %}
+
+The so—called Tritonus paradox can be demonstrated with Shepard tones. A tritone is heard depending on its context either as falling or rising.
+
+Evidence that pitch chroma and pitch height activate different parts of the brain come from Warren et al (2003) who showed that changes in both chroma and height activate the auditory cortex, but changes in pitch chroma activate regions anterior to the regions activated by pitch height changes. 
+
+# Tonality and Probe Tone Method
+
+Roger Shepard and his student Carol Krumhansl developed the Probe Tone method, aimed to explain the notion of tonality. Tonality is a hierarchical phenomenon in which the tones arranged in a system have varying amount of tension with each other. This raises the not yet fully answered question, whether the types of sound used in music (for example, with harmonic partials) ultimately determine how the music manifests itself.
+
+In this method, subjects listen to cadences and scales, with the target sound (the tonic) being replaced by a so-called probe tone. The subjects are asked on a scale of 1 to 7 to judge how well the probe tone "fits".
+By analyzing the data, three groups emerged which, depending on their musical background, were more or less able to perceive tonal hierarchies in major or minor context (the figure on the right shows results typical of experienced musicians).
+
+{% include img-figure url="/MUTOR/assets/images/ProbeTone-Method.png" description="Probe Tone Method" %}
+
+# Key Space
+Another view of pitch and tonal material looks at harmony and key changes in addition to single pitches. Krumhansl, Kessler & Bharucha (1983) found that dissimilarity judgments of pairs of chords map best onto a torus. The toroidal representation allows different tonal relations to map along the different planes of the torus, such that the C major key, for instance, is closely related to G major (circle of fifths), a minor (relative minor), and c minor (parallel minor).
+
+The arrangement of the 24 keys on the surface of a torus can now be derived from the experimentally obtained data by multidimensional scaling (https://en.wikipedia.org/wiki/Multidimensional_scaling). Multidimensional scaling is a process capable of constructing a two-dimensional map from a list of distances (such as the route Cologne-Hamburg or Stuttgart-Berlin). Taking now the tonality profiles as the starting point for all 24 major and minor keys, the comparison of the profiles yields a map depicting the distances (i.e., degree of relationship) of the keys as points on the surface of a torus (“donut"). It is noticeable that the two fifths (major = red, minor = blue) spiral around the torus.
+
+{% include img-figure url="/MUTOR/assets/images/torus_keys.png" description="Representation of Key Areas on the Surface of a Torus" %}
+
+Interestingly, Arnold Schönberg in his book ... came up with a chart of key regions which is strikingly similar to the torus unfolded into two dimensions.
+
+{% include img-figure url="/MUTOR/assets/images/chart-of-key-regions.png" description="Schoenberg's Chart of Key Regions" %}
+
+# Applications of Key Space
+
+## Music Generation
+
+At the University of California, Berkeley, David Wessel has instigated a program that uses the opposite approach: users move their mouse over the surface of the torus, controlling a generative process that generates profiles according to the melodies; the height of each bar for a given tone determines the frequency of its appearance. This makes it possible to continuously modulate from key to key. In the lower illustration, the torus has been cut in two dimensions and "laid flat".
+
+{% include note author="gh" text="Images of Key Space Max patch need to be inserted here" %}
+
+## Music Analysis
+
+With the help of Krumhansl's model, when playing (tonal) music, it is possible to determine which key is currently predominant and how the music moves across the surface of the cut-open torus. The zones become brighter, the clearer the sense of tonality is. In the animation (modulation in a composition by J.S. Bach), the authors compared the answer of an expert (upper half) with the output of a computer program (lower half).
+
+{% include begin-figure description="Modulation on the surface of the torus" %}
+<video width="435" height="343" controls>
+  <source src="/MUTOR/assets/videos/girl_from_ipanema_lbl.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
+{% include end-figure %}
+
+# Summary
 
 {% include unit_postamble.md %}
