--- a/_units/05.md
+++ b/_units/05.md
@@ -134,6 +134,8 @@ Figure 6. The autocorrelogram (A) for a 200-Hz-fundamental harmonic complex comp
 
 {% include note author="gh" text="I'd like go over the cases when the brain fails to calculate correct pitch: Terhardt: 11:12:13; Low-pitched triangle wave" %}
 
+# Phase locking
+
 # Cognitive Models of Pitch
 
 American psychologist Roger Shepard has developed a cognitive psychological model that represents pitch in a helix. In this case, the circular chroma circle (horizontal) can be distinguished from height (vertical). Octaves are always on the same side of the helix. By a clever construction tones can be formed, in which the dimension of the height is eliminated. These sounds, called "Shepard tones", are useful for constructing auditory illusions, e.g. endlessly rising or falling glissandi or scales. 
