unit 02, unit 05 and references
I mainly edited the unit 5. Including references links and questions to Georg :)

--- a/_units/02.md
+++ b/_units/02.md
@@ -6,7 +6,8 @@
 title: The Auditory System
 number: 2
 short_description: Anatomy and physiology
-summary: In this unit we will explain how does it works the biological process of hearing. We will cover the structure and function of the auditory system focusing on the elements that allow us to conceivd hearing as an actively perceiving process, more than just a passive response to a phisical stimulus. We will also compare our musical system with other species. and try to understand when and why the auditory system malfunctions and how to protect our own hearing. # The biological basis of hearing 
+summary: In this unit we will explain how does it works the biological process of hearing. We will cover the structure and function of the auditory system focusing on the elements that allow us to conceivd hearing as an actively perceiving process, more than just a passive response to a phisical stimulus. We will also compare our musical system with other species. and try to understand when and why the auditory system malfunctions and how to protect our own hearing. 
+# The biological basis of hearing 
 
 authors: 
  - Psyche Loui
@@ -23,7 +24,7 @@ test_questions:
     1. earmuffs
     2. cottonearplugs 
     3. plasticinserts
-    # we have to work on the presentation of this quiz/questions.
+# we have to work on the presentation of this quiz/questions.
 
 layout: unit
 citations: ""
