fixed some issues with the counters that keep track of figures, updated the example.md to discuss how to refer to a figure by number, and fixed a broken image link. also checking in the first half of a draft of unit 1

--- a/_units/01.md
+++ b/_units/01.md
@@ -5,8 +5,13 @@
 ###
 title: The Auditory Stimulus
 number: 1
-short_description: Introduction to the physics of sound and its mathematical and digital representation.
-summary: What we experience as sound is really a response to small variations in pressure that affect our inner ear. In this unit, we will discuss the physical properties of these pressure waves and how they propagate through a medium (air). We will also discuss the mathematical and digital representations of these waves.
+short_description: Introduction to the physics of sound and its mathematical 
+  and digital representation.
+summary: What we experience as sound is really a response to small variations 
+  in pressure that affect our inner ear. In this unit, we will discuss the 
+  physical properties of these pressure waves and how they propagate through 
+  a medium (air). We will also discuss the mathematical and digital 
+  representations of these waves.
 authors: 
 - John MacCallum
 topics: [Physics of Sound and its Representation]
@@ -25,6 +30,199 @@ mathjax: true
 
 {% include unit_preamble.md %}
 
-# Section 1
+# What Do We Hear?
+
+Sound is all around us, invisible, yet ever present in our daily lives, 
+but what exactly is it that we hear? In this unit, we focus on the 
+physical phenomena that affect our perception of sound, and different
+ways we represent those phenomena.
+
+When I make a sound, say I clap my hands together, I've produced a 
+disturbance in the air that eventually travels to your ears, 
+resulting in an effect that we ultimately describe as sound.
+This disturbance travels in every direction, reflecting
+differently off of every surface, walls, the floor, the ceiling, bodies,
+furniture, etc. depending on their materials. This is all caused by 
+air molecules bumping into each other; as they move away from the 
+source of the sound, they create a region of higher pressure 
+by *compressing* the space between themselves and their neighbors
+in the direction they are traveling.
+At the same time, the area in the opposite direction becomes a 
+region of lower pressure, or a *rarefaction*. Our ears are particularly
+sensitive to these very fast and very small changes in 
+pressure---you can think of our ears as extremely sensitive barometers.
+
+When those changes in air pressure propagate into our ears, they 
+transfer their energy through a complex array of anatomy, ultimately
+resulting in electrical impulses that travel up the nerve fibers
+from our inner ear to our brain, where we cognitively process
+this information as "sound". The transfers of energy from one
+medium to another is called *transduction*, and the different parts
+of our anatomy through which these pressure waves are *transduced*
+as they make their way to our brain will be discussed in 
+unit 2 {% include note author="jm" text="this should be a link to unit 2" %}.
+For now, we will focus in this unit on physical characteristics of 
+sound waves, and the ways we represent them.
+
+# Recording and Representing Sound
+
+{% include img-figure url="/MUTOR/assets/images/waveform_trombone.png" 
+           description="A waveform" 
+%} {% assign fig_waveform=fignum %}
+
+The image in figure {{ fig_waveform }} may be a familiar
+one---we might say we see a sound there, but it would be more accurate
+to refer to it as a *waveform*, as sound is something we *perceive*
+in time, rather than something we have and see as in this image.
+In order to produce a visual representation of something that sounds,
+we usually transduce the sound mechanically, such that its movements
+produce a visible trace on some medium. In the earliest recording devices,
+such as Thomas Edison's 
+[phonograph cylinders](https://en.wikipedia.org/wiki/Phonograph_cylinder), 
+a needle, moved
+by sound vibrations, traced grooves in a wax cylinder. By reversing the
+process, i.e. spinning the cylinder while touching the needle to it
+and transferring the movement of the needle to a diaphragm, causing the 
+tiny movements of the needle to displace a larger amount of air,
+the recorded sound could be played back, as shown in the video below:
+
+<div style="display: block; text-align: center; float: center">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/fWLlbk_bI7E" 
+frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; 
+picture-in-picture" allowfullscreen></iframe>
+</div>
+
+The playback in such a device relies on analog amplification: a heavy,
+but small needle modulates a thin and light, but larger membrane that 
+displaces a larger volume of air. Other recording and playback technologies
+involve the transduction of air movement into an electrical signal. This
+is done by using a small, light diaphragm to displace a coiled wire surrounded
+by a magnet. These small movements of the coil relative to the magnet alter the 
+magnetic field and produce
+a very small electrical current, the voltage of which varies proportionally
+to the compressions and rarefactions of the sound. 
+<div style="display: block; text-align: center; float: center">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/d_crXXbuEKE" 
+frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; 
+picture-in-picture" allowfullscreen></iframe>
+</div>
+
+Speakers work in the opposite way: an electrical signal is sent to
+a coil surrounded by a magnet, and the modulations in voltage cause displace
+the coil and a membrane, or speaker cone, attached to it, which moves the air
+back and forth.
+
+*Digital* recordings make use of the *analog* electrical signal described
+above, but record the value of the voltage *periodically*, by *sampling* it
+commonly at 44100 times per second. This is done using an 
+*Analog to Digital Converter* or *ADC*, and the process is reversed 
+by a *Digital to Analog Converter* or *DAC*, which modulates
+the voltage of an electrical signal proportional to the sampled values.
+
+Analog and digital representations of sound are similar, but have some important
+differences. Perhaps most importantly, analog signals are *continuous*,
+while digital signals are *discrete*, i.e. they 
+can be thought of as consisting of individual values
+that were recorded by taking samples of an electrical voltage a finite number
+of times, at equally spaced intervals in time. 
+{% include begin-figure description="Digital (discrete) vs. analog (continuous)
+representations of a signal" %}
+{% include note author="jm" text="placeholder" %}
+{% include end-figure %}
+This process comes with advantages and disadvantages, the main disadvantage
+being the loss of information between samples. During playback,
+this lost information is reconstructed during the digital to analog
+conversion process using a 
+[reconstruction filter](https://en.wikipedia.org/wiki/Reconstruction_filter).
+The advantage of digital representation, however, is that we may operate on 
+the signal numerically and computationally.
+
+# Quantitative and Visual Descriptions of Sound in the Time Domain
+
+Let's return to figure {{ fig_waveform }} and discuss its properties in more 
+detail. The horizontal dimension represents time, and the vertical dimension 
+represents *amplitude*, a physical property related to the perceptual
+experience of *loudness*. This representation of a sound is said to be in 
+the *time domain*, because it shows us how the signal varies as a function
+of time. We should keep in mind, though, that what we experience as *sound*
+involves the higher-order cognitive processing of a dynamically changing
+3-dimentional signal as it interacts with our environment over time. By
+contrast, figure {{ fig_waveform }} is a rather simple, two dimentional signal
+that can more accurately be thought of as the digitally sampled voltage
+of a transducer modulated over time by changes in air pressure at a particular
+location in space.
+
+Let's take a closer look at the details of a time-domain waveform.
+
+## Time Domain Representations of Signals
+
+{% include begin-figure description="A sine wave." %} 
+<img src="/MUTOR/assets/images/sin-amp-period.png" alt="A sine wave" 
+style="width: 100%;">
+{% include end-figure %}
+{% assign fig_sin=fignum %}
+
+In figure {{ fig_sin }}, we see a special waveform called a *sine wave*.
+A sine wave is special because it is *periodic*, meaning that its shape
+repeats over and over again. The amount of time it takes for it to repeat
+is called its *period*, and the number of periods that occur in one 
+second is called its *frequency*. A sine wave is a plot of the position
+along the y-axis of a point as it travels counter-clockwise around a 
+unit circle, starting from the point (1, 0).
+{% include img-figure url="/MUTOR/assets/images/Sine.gif" 
+                      description="The relationship between a sine wave
+					  and the position of a point on the circumference
+					  of a circle." %}
+
+As we mentioned above, the physical property *amplitude* is related the 
+perceptual experience of *loudness*. Additionally, the *frequency* of this
+sine wave is related to the perceptual experience of *pitch*, with 
+higher frequencies and shorter periods correlating to higher pitches.
+
+The last property of this waveform is the *phase*. The phase is the position
+in the period relative to some point that we determine to be the beginning.
+A *cosine wave* appears exactly the same as a sine wave, shifted $1/4$
+of a period to the left.
+{% include img-figure url="/MUTOR/assets/images/sin-cos-90phase.png" 
+                      description="The relationship between a sine
+					  and a cosine." %}
+Where a sine wave was the position along the y-axis, a cosine wave
+is the position of the same point along the x-axis.
+{% include img-figure url="/MUTOR/assets/images/Cosine.gif" 
+                      description="The relationship between a cosine wave
+					  and the position of a point on the circumference
+					  of a circle." %}
+Since the phase difference between a sine wave and a cosine wave is 
+$1/4$ of a period, and that corresponds to our point having traveled
+$1/4$ of the way around the circle, or $90^{\circ}$, we can say that 
+the two have a phase difference of $90^{\circ}$.
+
+<!--
+Periodic and quasi-periodic signals
+
+Frequency and period (related to pitch)
+
+Phase
+
+Correlate these to physical phenomena (speaker cone, for example)
+-->
+
+# Pure and Complex Sounds
+
+## Pure Sounds
+
+## Complex Sounds
+
+## Noise
+
+# Frequency Domain Representations of Sound
+
+Fourier transform
+
+Spectrum
+
+DFT vs Fourier transform and resolution
+
+
 
 {% include unit_postamble.md %}
